# ntn-sustainability-control

./: .dockerignore  .gitignore  LICENSE  README.md  docker-compose-prod.yml  docker-compose.yml
.devcontainer/: devcontainer.json
db/: init.sql
grpc/: CMakeLists.txt  Dockerfile  Dockerfile.base  README.md
grpc/models/: crisis_gru.onnx  crisis_gru.onnx.data  metadata.json
grpc/proto/: crisis.proto
grpc/src/: server.cpp
grpc/validation/: config.py  data.py  ntn_state.py  requirements.txt  validate_grpc.py
web/: Dockerfile  package-lock.json  package.json  svelte.config.js
web/src/: app.d.ts  hooks.server.ts
web/src/lib/: db_queries.ts  grpc.ts  logger.server.ts  ntn.ts
web/src/routes/: +error.svelte  +layout.svelte  +page.server.ts  +page.svelte
web/src/routes/api/history/: +server.ts
web/src/routes/api/release/: +server.ts
web/src/routes/api/update/: +server.ts
web/static/: system-view-6g.mmd
